Add shoes and t-shirt

--- a/assets/components.json
+++ b/assets/components.json
@@ -265,7 +265,9 @@
                                                 "route": "Route",
                                                 "segway": "Segway",
                                                 "shemagh": "Shemagh Face Covering (custom)",
+                                                "shoes": "Shoes",
                                                 "swimmer": "Swimmer",
+                                                "tshirt": "T-Shirt",
                                                 "ticket-alt": "Ticket",
                                                 "user": "User/Person",
                                                 "users": "Users/People",
@@ -372,7 +374,9 @@
                                                 "route": "Route",
                                                 "segway": "Segway",
                                                 "shemagh": "Shemagh Face Covering (custom)",
+                                                "shoes": "Shoes",
                                                 "swimmer": "Swimmer",
+                                                "tshirt": "T-Shirt",
                                                 "ticket-alt": "Ticket",
                                                 "user": "User/Person",
                                                 "users": "Users/People",
@@ -468,7 +472,9 @@
                                                 "route": "Route",
                                                 "segway": "Segway",
                                                 "shemagh": "Shemagh Face Covering (custom)",
+                                                "shoes": "Shoes",
                                                 "swimmer": "Swimmer",
+                                                "tshirt": "T-Shirt",
                                                 "ticket-alt": "Ticket",
                                                 "user": "User/Person",
                                                 "users": "Users/People",
@@ -741,7 +747,9 @@
                                                 "route": "Route",
                                                 "segway": "Segway",
                                                 "shemagh": "Shemagh Face Covering (custom)",
+                                                "shoes": "Shoes",
                                                 "swimmer": "Swimmer",
+                                                "tshirt": "T-Shirt",
                                                 "ticket-alt": "Ticket",
                                                 "user": "User/Person",
                                                 "users": "Users/People",
@@ -830,7 +838,9 @@
                                                 "route": "Route",
                                                 "segway": "Segway",
                                                 "shemagh": "Shemagh Face Covering (custom)",
+                                                "shoes": "Shoes",
                                                 "swimmer": "Swimmer",
+                                                "tshirt": "T-Shirt",
                                                 "ticket-alt": "Ticket",
                                                 "user": "User/Person",
                                                 "users": "Users/People",
@@ -1890,7 +1900,9 @@
                                             "puzzle-piece": "Puzzle Piece",
                                             "route": "Route",
                                             "shemagh": "Shemagh Face Covering (custom)",
+                                            "shoes": "Shoes",
                                             "swimmer": "Swimmer",
+                                            "tshirt": "T-Shirt",
                                             "ticket-alt": "Ticket",
                                             "user": "User/Person",
                                             "users": "Users/People",
@@ -2137,7 +2149,9 @@
                         "route": "Route",
                         "segway": "Segway",
                         "shemagh": "Shemagh Face Covering (custom)",
+                        "shoes": "Shoes",
                         "swimmer": "Swimmer",
+                        "tshirt": "T-Shirt",
                         "ticket-alt": "Ticket",
                         "user": "User/Person",
                         "users": "Users/People",
@@ -2207,7 +2221,9 @@
                                     "route": "Route",
                                     "segway": "Segway",
                                     "shemagh": "Shemagh Face Covering (custom)",
+                                    "shoes": "Shoes",
                                     "swimmer": "Swimmer",
+                                    "tshirt": "T-Shirt",
                                     "ticket-alt": "Ticket",
                                     "user": "User/Person",
                                     "users": "Users/People",
@@ -2281,7 +2297,9 @@
                                     "route": "Route",
                                     "segway": "Segway",
                                     "shemagh": "Shemagh Face Covering (custom)",
+                                    "shoes": "Shoes",
                                     "swimmer": "Swimmer",
+                                    "tshirt": "T-Shirt",
                                     "ticket-alt": "Ticket",
                                     "user": "User/Person",
                                     "users": "Users/People",
