--- a/assets/components.json
+++ b/assets/components.json
@@ -250,7 +250,8 @@
                                                 "award": "Award",
                                                 "battery-bolt": "Battery (Bolt/Charge)",
                                                 "blanket": "Blanket/Towel",
-                                                "briefcase": "Business",
+                                                "briefcase": "Briefcase",
+                                                "building": "Building",
                                                 "calendar": "Calendar",
                                                 "camera-retro": "Camera",
                                                 "car": "Car",
@@ -359,7 +360,8 @@
                                                 "award": "Award",
                                                 "battery-bolt": "Battery (Bolt/Charge)",
                                                 "blanket": "Blanket/Towel",
-                                                "briefcase": "Business",
+                                                "briefcase": "Briefcase",
+                                                "building": "Building",
                                                 "calendar": "Calendar",
                                                 "camera-retro": "Camera",
                                                 "car": "Car",
@@ -457,7 +459,8 @@
                                                 "award": "Award",
                                                 "battery-bolt": "Battery (Bolt/Charge)",
                                                 "blanket": "Blanket/Towel",
-                                                "briefcase": "Business",
+                                                "briefcase": "Briefcase",
+                                                "building": "Building",
                                                 "calendar": "Calendar",
                                                 "camera-retro": "Camera",
                                                 "car": "Car",
@@ -732,7 +735,8 @@
                                                 "award": "Award",
                                                 "battery-bolt": "Battery (Bolt/Charge)",
                                                 "blanket": "Blanket/Towel",
-                                                "briefcase": "Business",
+                                                "briefcase": "Briefcase",
+                                                "building": "Building",
                                                 "calendar": "Calendar",
                                                 "camera-retro": "Camera",
                                                 "car": "Car",
@@ -823,7 +827,8 @@
                                                 "award": "Award",
                                                 "battery-bolt": "Battery (Bolt/Charge)",
                                                 "blanket": "Blanket/Towel",
-                                                "briefcase": "Business",
+                                                "briefcase": "Briefcase",
+                                                "building": "Building",
                                                 "calendar": "Calendar",
                                                 "camera-retro": "Camera",
                                                 "car": "Car",
@@ -1241,44 +1246,44 @@
                 "name": "icon",
                 "label": "Icon",
                 "type": "select",
+                "default": "",
+                "info": "Icon to show at end of itinerary. (Optional)",
+                "group": "",
+                "localize": false,
                 "options": {
-                    "fields": [
-                        {
-                            "type": "text",
-                            "name": "name",
-                            "label": "Name"
-                        },
-                        {
-                            "type": "asset",
-                            "name": "icon",
-                            "label": "Icon"
-                        },
-                        {
-                            "type": "text",
-                            "name": "description",
-                            "label": "Description"
-                        },
-                        {
-                            "type": "set",
-                            "name": "action",
-                            "label": "Action",
-                            "options": {
-                                "fields": [
-                                    {
-                                        "type": "text",
-                                        "name": "label",
-                                        "label": "Label"
-                                    },
-                                    {
-                                        "type": "text",
-                                        "name": "path",
-                                        "label": "Path"
-                                    }
-                                ]
-                            }
-                        }
-                    ]
-                }
+                    "options": {
+                        "award": "Award",
+                        "battery-bolt": "Battery (Bolt/Charge)",
+                        "blanket": "Blanket/Towel",
+                        "briefcase": "Briefcase",
+                        "building": "Building",
+                        "calendar": "Calendar",
+                        "camera-retro": "Camera",
+                        "car": "Car",
+                        "clock": "Clock",
+                        "envelope": "Envelope",
+                        "flag-checkered": "Flag (Checkered)",
+                        "hard-hat": "Helmet",
+                        "hotel": "Hotel",
+                        "money-bill-wave": "Money",
+                        "phone": "Phone",
+                        "puzzle-piece": "Puzzle Piece",
+                        "route": "Route",
+                        "segway": "Segway",
+                        "shemagh": "Shemagh Face Covering (custom)",
+                        "shoes": "Shoes",
+                        "swimmer": "Swimmer",
+                        "tshirt": "T-Shirt",
+                        "ticket-alt": "Ticket",
+                        "user": "User/Person",
+                        "users": "Users/People",
+                        "water-bottle": "Water Bottle (custom)",
+                        "wifi": "wifi"
+                    }
+                },
+                "width": "1-1",
+                "lst": true,
+                "acl": []
             },
             {
                 "name": "showMap",
@@ -1929,7 +1934,8 @@
                                             "award": "Award",
                                             "battery-bolt": "Battery (Bolt/Charge)",
                                             "blanket": "Blanket/Towel",
-                                            "briefcase": "Business",
+                                            "briefcase": "Briefcase",
+                                            "building": "Building",
                                             "calendar": "Calendar",
                                             "camera-retro": "Camera",
                                             "car": "Car",
@@ -2177,7 +2183,8 @@
                         "award": "Award",
                         "battery-bolt": "Battery (Bolt/Charge)",
                         "blanket": "Blanket/Towel",
-                        "briefcase": "Business",
+                        "briefcase": "Briefcase",
+                        "building": "Building",
                         "calendar": "Calendar",
                         "camera-retro": "Camera",
                         "car": "Car",
@@ -2249,7 +2256,8 @@
                                     "award": "Award",
                                     "battery-bolt": "Battery (Bolt/Charge)",
                                     "blanket": "Blanket/Towel",
-                                    "briefcase": "Business",
+                                    "briefcase": "Briefcase",
+                                    "building": "Building",
                                     "calendar": "Calendar",
                                     "camera-retro": "Camera",
                                     "car": "Car",
@@ -2325,7 +2333,8 @@
                                     "award": "Award",
                                     "battery-bolt": "Battery (Bolt/Charge)",
                                     "blanket": "Blanket/Towel",
-                                    "briefcase": "Business",
+                                    "briefcase": "Briefcase",
+                                    "building": "Building",
                                     "calendar": "Calendar",
                                     "camera-retro": "Camera",
                                     "car": "Car",
