Rephrase help text for org. icon.

--- a/assets/components.json
+++ b/assets/components.json
@@ -1247,7 +1247,7 @@
                 "label": "Icon",
                 "type": "select",
                 "default": "",
-                "info": "Icon to show at end of itinerary. (Optional)",
+                "info": "Icon to show on map marker (Optional)",
                 "group": "",
                 "localize": false,
                 "options": {
