Update Options for organization

--- a/assets/components.json
+++ b/assets/components.json
@@ -1291,10 +1291,10 @@
                 "type": "boolean",
                 "default": "",
                 "info": "",
-                "group": "",
+                "group": "Options",
                 "localize": false,
                 "options": [],
-                "width": "1-1",
+                "width": "1-2",
                 "lst": true,
                 "acl": [],
                 "required": false
@@ -1305,10 +1305,10 @@
                 "type": "boolean",
                 "default": "",
                 "info": "",
-                "group": "",
+                "group": "Options",
                 "localize": false,
                 "options": [],
-                "width": "1-1",
+                "width": "1-2",
                 "lst": true,
                 "acl": [],
                 "required": false
