--- a/assets/components.json
+++ b/assets/components.json
@@ -1219,6 +1219,32 @@
         ],
         "group": "EAT"
     },
+    "organizationList": {
+        "label": "Business/Organization List",
+        "dialog": "normal",
+        "children": false,
+        "icon": "data:image/svg+xml,%3Csvg aria-hidden='true' focusable='false' data-prefix='fal' data-icon='briefcase' role='img' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512' class='svg-inline--fa fa-briefcase fa-w-16 fa-9x'%3E%3Cpath fill='currentColor' d='M464 128H352V56c0-13.26-10.74-24-24-24H184c-13.26 0-24 10.74-24 24v72H48c-26.51 0-48 21.49-48 48v256c0 26.51 21.49 48 48 48h416c26.51 0 48-21.49 48-48V176c0-26.51-21.49-48-48-48zM192 64h128v64H192V64zm288 368c0 8.82-7.18 16-16 16H48c-8.82 0-16-7.18-16-16V288h160v40c0 13.25 10.75 24 24 24h80c13.25 0 24-10.75 24-24v-40h160v144zM224 320v-32h64v32h-64zm256-64H32v-80c0-8.82 7.18-16 16-16h416c8.82 0 16 7.18 16 16v80z' class=''%3E%3C/path%3E%3C/svg%3E",
+        "fields": [
+            {
+                "name": "organization",
+                "label": "Organization",
+                "type": "collectionlink",
+                "default": "",
+                "info": "",
+                "group": "",
+                "localize": false,
+                "options": {
+                    "link": "organizations",
+                    "display": "name"
+                },
+                "width": "1-1",
+                "lst": true,
+                "acl": [],
+                "required": true
+            }
+        ],
+        "group": "EAT"
+    },
     "organizationContact": {
         "label": "Business Contact Information",
         "dialog": "normal",
@@ -1235,7 +1261,8 @@
                 "localize": false,
                 "options": {
                     "link": "organizations",
-                    "display": "name"
+                    "display": "name",
+                    "limit": 1
                 },
                 "width": "1-1",
                 "lst": true,
