Allow multiple selections for biz list

--- a/assets/components.json
+++ b/assets/components.json
@@ -1235,7 +1235,8 @@
                 "localize": false,
                 "options": {
                     "link": "organizations",
-                    "display": "name"
+                    "display": "name",
+                    "multiple": true
                 },
                 "width": "1-1",
                 "lst": true,
