--- a/assets/components.json
+++ b/assets/components.json
@@ -1485,7 +1485,7 @@
             {
                 "name": "mode",
                 "label": "Display Mode",
-                "type": "boolean",
+                "type": "select",
                 "default": "card",
                 "info": "",
                 "group": "Options",
