--- a/assets/components.json
+++ b/assets/components.json
@@ -1473,7 +1473,7 @@
                 "name": "showTop",
                 "label": "Show Top-level Items",
                 "type": "boolean",
-                "default": "",
+                "default": true,
                 "info": "",
                 "group": "Options",
                 "localize": false,
@@ -1486,7 +1486,6 @@
                 "name": "mode",
                 "label": "Display Mode",
                 "type": "select",
-                "default": "card",
                 "info": "",
                 "group": "Options",
                 "localize": false,
@@ -1495,7 +1494,7 @@
                         "list": "List",
                         "card": "Card"
                     },
-                    "default": "vertical"
+                    "default": "card"
                 },
                 "width": "1-2",
                 "lst": true,
