--- a/assets/components.json
+++ b/assets/components.json
@@ -1473,11 +1473,13 @@
                 "name": "showTop",
                 "label": "Show Top-level Items",
                 "type": "boolean",
-                "default": true,
+                "default": "",
                 "info": "",
                 "group": "Options",
                 "localize": false,
-                "options": [],
+                "options": {
+                    "default": true
+                },
                 "width": "1-2",
                 "lst": true,
                 "acl": []
